# event_handler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/event_handler/: __init__.py  base_manager.py  event_manager.py  file_parser.py  joy_map.py  key_manager.py  key_map.py
src/simple_events/: __init__.py  base_manager.py  event_manager.py  joy_map.py  key_manager.py
tests/: test_event_manager.py  test_key_manager.py
